--- a/css/style.css
+++ b/css/style.css
@@ -601,6 +601,7 @@ color:#2196F3;
         position: absolute;
         top: 50%;
         left: 50%;
+        padding: 40px;
         transform: translate(-50%,-50%);
         width: 528px;
         min-height: 581px;
@@ -616,8 +617,8 @@ color:#2196F3;
         height: 30px;
         border-radius: 50%;
         border: 1px solid rgba(0, 0, 0, 0.1);
-background-color: #FFFFFF;
-color:#000000;
+        background-color: #FFFFFF;
+        color:#000000;
     }
     .icon-close{
         fill: currentColor;
@@ -630,11 +631,86 @@ color:#000000;
     }
     .backdrop.is-hidden.modal{
         opacity: 0;
-        transform: translate(-50%,70%);
-       
+        transform: translate(-50%,70%); 
+    }
+    .modal-form-group{
+        margin-bottom: 12px;
+    }
+    .modal-label{
+        display: block;
+        width: 448px;
+
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: #212121;
+    }
+    .modal-form-label {
+        display: block;
+        margin-bottom: 4px;
+      
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.01em;
+        color: #757575;
+    }
+    .modal-form-wrapper {
+        position: relative;
+        margin-bottom: 10px;
+    }
+    .modal-form-field {
+        width: 100%;
+        height: 40px;
+        padding-left: 42px;
+        padding-top: 12px;
+        padding-bottom: 12px;
+
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        outline: 1px solid transparent;
+        transition: outline 250ms cubic-bezier(0.4,0,0.2,1);
+    }
+    .modal-form-field:focus {
+        outline-color: var(--accent-color);
+    }
+    .icon-form {
+        position: absolute;
+        top: 50%;
+        left: 12px;
+        transform: translateY(-50%);
+
+    }
+    .modal-form-field:focus + .icon-form {
+        fill: var(--accent-color);
+    }
+    .modal-form-message{
+        width: 100%;
+        height: 120px;
+        padding: 16px 12px;
+
+        resize: none;
+
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.01em;
+        color: rgba(117, 117, 117, 0.5);
+
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        outline:  1px solid transparent;
+        transition: outline 250ms cubic-bezier(0.4,0,0.2,1);
+    
     }
 
-    
+    .modal-form-message:focus{
+        outline-color: var(--accent-color); 
+    }
+    .modal-form-message:focus::placeholder{
+        opacity: 0;
+    }
+
     /*---------PORTFOLIO------------*/
    
     .list-filter-btn{
