--- a/css/style.css
+++ b/css/style.css
@@ -534,8 +534,7 @@ color:#2196F3;
         fill:currentColor;
     }
     .container-subscribe{
-        position: absolute;
-        right: 15px;
+        margin-left: auto;
     }
     .text-subscribe{ 
         width: 207px; 
@@ -557,6 +556,8 @@ color:#2196F3;
         height: 50px;
         padding: 15px 16px;
 
+        color: rgba(255, 255, 255, 0.6);
+        background-color: var(--frame-color);
         outline: 1px solid transparent;
         border: 1px solid rgba(255, 255, 255, 0.3);
         border-radius: 4px;
@@ -609,7 +610,7 @@ color:#2196F3;
         position: absolute;
         top: 50%;
         left: 50%;
-        /* padding: 40px; */
+        padding: 40px;
         transform: translate(-50%,-50%);
         width: 528px;
         min-height: 581px;
@@ -618,18 +619,26 @@ color:#2196F3;
     }
     .modal-button{
         position: absolute;
-        padding: 6px;
+        padding: 0;
         top: 8px;
         right: 8px;
         width: 30px;
         height: 30px;
+
         border-radius: 50%;
         border: 1px solid rgba(0, 0, 0, 0.1);
         background-color: #FFFFFF;
         color:#000000;
     }
     .icon-close{
+        display: block;
+        margin: 0 auto;
         fill: currentColor;
+        transition: color 250ms cubic-bezier(0.4,0,0.2,1);
+    }
+    
+    .icon-close:hover{
+        color: var(--accent-color); 
     }
     .backdrop.is-hidden{
         opacity: 0;
@@ -645,7 +654,7 @@ color:#2196F3;
     .modal-label{
         display: block;
         width: 448px;
-        margin: 40px 40px 12px 40px;
+        margin-bottom: 12px;
 
         font-weight: 700;
         font-size: 20px;
@@ -655,9 +664,7 @@ color:#2196F3;
         color: #212121;
     }
     .modal-form-group{
-       margin-left: 40px;
-       margin-right: 40px;
-       margin-bottom: 20px;
+        margin-bottom: 20px;
     }
     .modal-form-label {
         display: block;
@@ -712,12 +719,12 @@ color:#2196F3;
         border: 1px solid rgba(33, 33, 33, 0.2);
         border-radius: 4px;
         outline:  1px solid transparent;
-        transition: outline 250ms cubic-bezier(0.4,0,0.2,1);
+        transition: border 250ms cubic-bezier(0.4,0,0.2,1);
     
     }
 
     .modal-form-message:focus{
-        outline-color: var(--accent-color); 
+        border: 1px solid var(--accent-color);
     }
     .modal-form-message:focus::placeholder{
         opacity: 0;
@@ -728,10 +735,7 @@ color:#2196F3;
         justify-content: center;
         align-items: center;
         gap: 7px;
-        margin-left: 54px;
         margin-bottom: 30px;
-        width: 423px;
-        padding: 0;
     }
     .agreement-label{
         font-size: 14px;
@@ -747,8 +751,9 @@ color:#2196F3;
     }
     .modal-form-checkbox{
         display: block;
-        position: absolute;
         appearance: none;
+        margin: 0;
+        padding: 0;
         width: 16px;
         height: 15px;
         left: 0;
@@ -769,7 +774,7 @@ color:#2196F3;
         display: block;
         position: absolute;
         top: 50%;
-        left: 3px;
+        left: 23px;
         transform: translateY(-50%);
 
         opacity: 0;
@@ -781,9 +786,8 @@ color:#2196F3;
     }
     .modal-form-button{
         display: flex;
-        align-items: center;
-       justify-content: center;
-       margin-left: 164px;
+       margin-right: auto;
+       margin-left: auto;
 
         border-radius: 4px;
         padding: 10px 52px;
