--- a/css/style.css
+++ b/css/style.css
@@ -58,19 +58,30 @@
     outline-offset: -2px;*/
     }
     
-    button {
+    .button {
     display: inline-block;
     cursor: pointer;
     border: transparent;
     }
     
     .section__title {
-        font-size: 36px;
-        line-height: 1.14;
-        text-align: center;
-        letter-spacing: 0.03em;
-        }
-    
+    font-size: 36px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    }
+    .title-vissualy-hidden{
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+    }
     /*---------HEADER--------*/
     .header {
     border-bottom: 1px solid #ECECEC;
@@ -233,18 +244,7 @@
     .feature__container {
     display: flex;
     }
-    .feature__title-vissualy-hidden{
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-    }
+    
     .feature__list{
     display: flex;
     }
@@ -499,16 +499,16 @@
     text-transform: uppercase;
     color: var(--text-color-light);
     }
-    .list-join{
+    .join__list{
     display: flex;
     gap: 10px;
     align-items: center;    
     }
-    .list-item-join{
+    .join__item{
     width: 44px;
     height: 44px;
     }
-    .link-join{
+    .join__link{
     display: flex; 
     width: 100%;
     height: 100%;
@@ -520,17 +520,17 @@
 
     transition:background-color 250ms cubic-bezier(0.4,0,0.2,1);
     }
-    .link-join:hover,
-    .link-join:focus{
+    .join__link:hover,
+    .join__link:focus{
     background-color: var(--accent-color);
     }
-    .icon-join{
+    .join__icon{
     fill:currentColor;
     }
-    .container-subscribe{
+    .subscribe__container{
     margin-left: auto;
     }
-    .text-subscribe{ 
+    .subscribe__text{ 
     width: 207px; 
     margin-bottom: 20px;
 
@@ -541,11 +541,11 @@
     text-transform: uppercase;
     color: #FFFFFF;
     }
-    .form-subscribe {
+    .subscribe__form {
     display: flex;
     gap: 12px;
     }
-    .field-subscribe{
+    .subscribe__field{
     width: 358px;
     height: 50px;
     padding: 15px 16px;
@@ -558,7 +558,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     }
 
-    .button-subscribe{
+    .subscribe__button{
     gap: 10px;
     border-radius: 4px;
     padding: 10px 32px;
@@ -578,11 +578,11 @@
     background:var(--accent-color);
     transition: box-shadow 250ms cubic-bezier(0.4,0,0.2,1);
     }
-    .button-subscribe:hover,
-    .button-subscribe:focus{
+    .subscribe__button:hover,
+    .subscribe__button:focus{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     }
-    .icon-subscribe{
+    .subscribe__icon{
     fill: currentColor;
     }
 
@@ -611,7 +611,16 @@
     background-color: var(--text-color-light);
     border-radius: 4px;
     }
-    .modal-button{
+    .backdrop.is-hidden{
+     opacity: 0;
+    visibility: hidden;
+    pointer-events: none;   
+    }
+    .backdrop.is-hidden.modal{
+    opacity: 0;
+    transform: translate(-50%,70%); 
+    }
+    .modal__button{
     position: absolute;
     padding: 0;
     top: 8px;
@@ -624,28 +633,16 @@
     background-color: #FFFFFF;
     color:#000000;
     }
-    .icon-close{
+    .modal__icon-close{
     display: block;
     margin: 0 auto;
     fill: currentColor;
     transition: color 250ms cubic-bezier(0.4,0,0.2,1);
     }
-    
-    .icon-close:hover{
+    .modal__icon-close:hover{
     color: var(--accent-color); 
     }
-    .backdrop.is-hidden{
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-        
-    }
-    .backdrop.is-hidden.modal{
-    opacity: 0;
-    transform: translate(-50%,70%); 
-    }
-    
-    .modal-label{
+    .modal__label{
     display: block;
     width: 448px;
     margin-bottom: 12px;
@@ -657,11 +654,11 @@
     letter-spacing: 0.03em;
     color: #212121;
     }
-    .modal-form-group{
+    .form__group{
     margin-bottom: 20px;
     }
-    .modal-form-label {
-        display: block;
+    .form__label {
+    display: block;
     margin-bottom: 4px;
       
     font-size: 12px;
@@ -669,11 +666,11 @@
     letter-spacing: 0.01em;
     color: #757575;
     }
-    .modal-form-wrapper {
+    .form__wrapper {
     position: relative;
     margin-bottom: 10px;
     }
-    .modal-form-field {
+    .form__field {
     width: 100%;
     height: 40px;
     padding-left: 42px;
@@ -685,20 +682,19 @@
     outline: 1px solid transparent;
     transition: outline 250ms cubic-bezier(0.4,0,0.2,1);
     }
-    .modal-form-field:focus {
+    .form__field:focus {
     outline-color: var(--accent-color);
     }
-    .icon-form {
+    .form__icon {
     position: absolute;
     top: 50%;
     left: 12px;
     transform: translateY(-50%);
-
     }
-    .modal-form-field:focus + .icon-form {
+    .form__field:focus + .form__icon {
     fill: var(--accent-color);
     }
-    .modal-form-message{
+    .form__message{
     width: 100%;
     height: 120px;
     padding: 16px 12px;
@@ -716,13 +712,13 @@
     transition: border 250ms cubic-bezier(0.4,0,0.2,1);
     }
 
-    .modal-form-message:focus{
+    .form__message:focus{
     border: 1px solid var(--accent-color);
     }
-    .modal-form-message:focus::placeholder{
+    .form__message:focus::placeholder{
     opacity: 0;
     }
-    .modal-form-agreement{
+    .agreement{
         position: relative;
         display: flex;
         justify-content: center;
@@ -730,19 +726,7 @@
         gap: 7px;
         margin-bottom: 30px;
     }
-    .agreement-label{
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        color:var(--text-color-paragraf);
-    }
-    .link-agreement{
-        text-decoration-line: underline;
-        text-underline-offset: 3px;
-        color: #2196F3;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-    .modal-form-checkbox{
+    .agreement__checkbox{
         display: block;
         appearance: none;
         margin: 0;
@@ -758,12 +742,12 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         transition: outline-color 250ms cubic-bezier(0.4,0,0.2,1), background-color 250ms cubic-bezier(0.4,0,0.2,1);;
     }
-    .modal-form-checkbox:checked{
+    .agreement__checkbox:checked{
         background-color: var(--accent-color);
         outline-color: var(--accent-color);
         /* background-image: url("data:image/svg+xml,%3Csvg width='13' height='10' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E"); */
     }
-    .icon-checkbox{
+    .agreement__icon{
         display: block;
         position: absolute;
         top: 50%;
@@ -774,10 +758,22 @@
         pointer-events: none;
         transition: opacity 250ms cubic-bezier(0.4,0,0.2,1);
     }
-    .modal-form-checkbox:checked + .icon-checkbox{
+    .agreement__checkbox:checked + .agreement__icon{
         opacity: 1;   
     }
-    .modal-form-button{
+    .agreement__label{
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color:var(--text-color-paragraf);
+    }
+    .agreement__link{
+        text-decoration-line: underline;
+        text-underline-offset: 3px;
+        color: #2196F3;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    .agreement__button{
         display: flex;
        margin-right: auto;
        margin-left: auto;
@@ -798,18 +794,21 @@
         background:var(--accent-color);
         transition: box-shadow 250ms cubic-bezier(0.4,0,0.2,1);
     }
-    .button-subscribe:hover,
-    .button-subscribe:focus{
+    .agreement__button:hover,
+    .agreement__button:focus{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     }
     /*---------PORTFOLIO------------*/
    
-    .list-filter-btn{
+    .portfolio__list {
     display: flex;
    justify-content: center;
    margin-bottom: 50px;
     }
-    .button-portfolio{
+    .portfolio__item{
+    margin-right: 8px;
+    }
+    .portfolio__button{
     padding:6px 22px;
    
     font-family: inherit;
@@ -827,41 +826,37 @@
     .item-filter:focus{
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     } */
-    .item-filter{
-    margin-right: 8px;
-    }
+   
     
-    .button-portfolio:hover,
-    .button-portfolio:focus{
+    .portfolio__button:hover,
+    .portfolio__button:focus{
     background-color: var(--accent-color);
     color: var(--text-color-light);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     }
-    .list-filter{
+    .filter{
     display: flex;
     flex-wrap: wrap;
     
     }
-    .list-item-filter{
-       
-        width: 370px;
-        margin-bottom: 30px;
-        margin-right: 30px;
+    .filter__item{
+    width: 370px;
+    margin-bottom: 30px;
+    margin-right: 30px;
 
-        transition:box-shadow 250ms cubic-bezier(0.4,0,0.2,1);
-      
+    transition:box-shadow 250ms cubic-bezier(0.4,0,0.2,1);  
     }
-    .list-item-filter:nth-last-child(-n+3){
+    .filter__item:nth-last-child(-n+3){
         margin-bottom: 0px; 
     }
-    .list-item-filter:nth-child(3n){
+    .filter__item:nth-child(3n){
         margin-right: 0px;
     }
-    .list-item-filter:hover,
-    .list-item-filter:focus{
+    .filter__item:hover,
+    .filter__item:focus{
          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
-    .filter-thumb{
+    .filter__thumb{
         position: relative;
         overflow: hidden;
     }   
@@ -882,33 +877,33 @@
 
         transition: transform 250ms cubic-bezier(0.4,0,0.2,1);
     }
-    .overlay-text{
-font-weight: 400;
-font-size: 18px;
-line-height: 1.56;
-letter-spacing: 0.03em;
-color: #FFFFFF;
+    .overlay__text{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
 
     }
-    .list-item-filter:hover .overlay{
-        transform:translateY(0); 
+    .filter__item:hover .overlay{
+    transform:translateY(0); 
           
     }
-   .card-portfolio{
+   .filter__card{
     width: 370px;
     padding: 20px 24px; 
     border: 1px solid #EEEEEE;  
     border-top: none;
    }
     
-    .filter-caption {
+    .filter__undertitle {
     margin-bottom: 4px;
 
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     }
-    .filter-text {
+    .filter__text {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
